# tomography_alignment

./: .gitignore  LICENSE  README.md  f2py.sh  pyproject.toml
align/: align_rigid_body.py
examples/: align_rigid.py  generate_data.py  generate_misaligned_data.py  mpi_reconstruct.py  reconstruct.py
projectors/: linear_operators.py  projection_operators.py  ray_tracing.py
recon/: cgls.py  regularized.py  regularized_mpi.py  sirt.py  sirt_mpi.py
src/: back_projection.f90  external_back_projection.f90  external_forward_projection.f90  forward_projection.f90  projection_gradient.f90  ray_wt_grad.f90  vox_wt_grad.f90
tomoalign/: external_forward_projection.f90  rotations_module.f90
tomoalign/recon/: cgls.py  cgls_mpi.py  regularized.py  regularized_mpi.py  sirt.py  sirt_mpi.py
tomoalign/utils/: align_cc.py  alignment_functions.py  generate_phantom.py  geometry.py  projection_operators.py  ray_voxel_utilities.py  rotations.py  tv_denoise.py  voxel_utilities.py
utilities/: generate_phantom.py  geometry.py  rotations.py  tv_denoise.py  voxel_utilities.py
