[tool.poetry]
name = "tomoalign"
version = "0.1.0"
description = "Just a fork of pandekan/tomography_alignment for testing"
authors = ["ShantanuK <shantanukodgirwar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.25.1"
h5py = "^3.9.0"
scipy = "^1.11.1"
mpi4py = "^3.1.4"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.2"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
